--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Sanskrit Club</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="roboto" content="noindex">
 		<link rel="stylesheet" href="assets/css/main.css"/>
 		<link rel="stylesheet" href="assets/css/animate.min.css"/>
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
