--- a/index.html
+++ b/index.html
@@ -198,16 +198,16 @@
   <!-- The slideshow -->
   <div class="carousel-inner" style="text-align: center;">
     <div class="carousel-item active">
-      <img src="./images/act_1.jpg" alt="" width="100%" height="650">
+      <img src="./images/act_1.jpg" alt="" width="100%" height="600">
     </div>
     <div class="carousel-item">
-      <img src="./images/act_2.jpg" alt="" width="100%" height="650">
+      <img src="./images/act_2.jpg" alt="" width="100%" height="600">
     </div>
     <div class="carousel-item">
-      <img src="./images/act_3.jpg" alt="" width="100%" height="650">
+      <img src="./images/act_3.jpg" alt="" width="100%" height="600">
     </div>
     <div class="carousel-item">
-      <img src="./images/act_4.jpg" alt="" width="100%" height="650">
+      <img src="./images/act_4.jpg" alt="" width="100%" height="600">
     </div>
   </div>
   
@@ -241,10 +241,10 @@
         <!-- The slideshow -->
             <div class="carousel-inner" style="text-align: center;">
               <div class="carousel-item active">
-                <img src="./images/Learning_1.jpg" alt="" width="100%" height="650">
+                <img src="./images/Learning_1.jpg" alt="" width="100%" height="600">
               </div>
               <div class="carousel-item">
-                <img src="./images/Learning_2.jpg" alt="" width="100%" height="650">
+                <img src="./images/Learning_2.jpg" alt="" width="100%" height="600">
               </div>
             </div>
             
@@ -298,8 +298,8 @@
               <div id="teamwork">
                 <img src="images/teams/Alumni/Anula_face.jpg" style="width:100%;height: 12em;">
                  <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
-                 <h1 style="font-size: 1.3em;text-align: center;">PROF. ANIL KUMAR GOURISHETTY</h1>
-                 <p style="text-align: center;">Faculty Advisor</p><br><br>
+                 <h1 style="font-size:2.5em;text-align: center;">Anula</h1>
+                 <p style="text-align: center;">Alumni</p><br><br>
                   </div>
              </div>
             </div>
@@ -308,8 +308,8 @@
               <div id="teamwork">
                 <img src="images/teams/Alumni/Eklavya_face.jpg" style="width:100%;height: 12em;">
                  <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
-                 <h1 style="font-size: 1.3em;text-align: center;">SONALI SRIJAN</h1>
-                 <p style="text-align: center;">Executive Member</p><br><br>
+                 <h1 style="font-size:2.5em;text-align: center;">Eklavya</h1>
+                 <p style="text-align: center;">Alumni</p><br><br>
                  </div>
              </div>
             </div>
@@ -318,8 +318,8 @@
               <div id="teamwork">
                 <img src="images/teams/Alumni/Gargi_face.jpg" style="width:100%;height: 12em;">
                  <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
-                 <h1 style="font-size: 1.3em;text-align: center;">SHIVAM SHARMA</h1>
-                 <p style="text-align: center;">Executive Member</p><br><br>
+                 <h1 style="font-size:2.5em;text-align: center;">Gargi</h1>
+                 <p style="text-align: center;">Alumni</p><br><br>
                 </div>
              </div>
             </div>
@@ -328,8 +328,8 @@
               <div id="teamwork">
                 <img src="images/teams/Alumni/Mihir_face.jpg" style="width:100%;height: 12em;">
                  <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
-                 <h1 style="font-size: 1.3em;text-align: center;">GARGI KEKRE</h1>
-                 <p style="text-align: center;">Executive Member</p><br><br>
+                 <h1 style="font-size:2.5em;text-align: center;">Mihir</h1>
+                 <p style="text-align: center;">Alumni</p><br><br>
                 </div>
              </div>
             </div>
@@ -338,8 +338,8 @@
               <div id="teamwork">
                 <img src="images/teams/Alumni/Mrigank_face.jpg" style="width:100%;height: 12em;">
                  <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
-                 <h1 style="font-size: 1.3em;text-align: center;">MRIGANK SHARMA</h1>
-                 <p style="text-align: center;">Executive Member</p><br>
+                 <h1 style="font-size:2.5em;text-align: center;">MRIGANK</h1>
+                 <p style="text-align: center;">Alumni</p><br>
                 </div>
              </div>
             </div>
@@ -350,8 +350,8 @@
               <div id="teamwork">
                 <img src="images/teams/Present/anil sir_faculty adviser.jpg" style="width:100%;height: 12em;">
                  <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
-                 <h1 style="font-size: 1.3em;text-align: center;">MRIGANK SHARMA</h1>
-                 <p style="text-align: center;">Executive Member</p><br>
+                 <h1 style="font-size: 2.5em;text-align: center;">Anil sir</h1>
+                 <p style="text-align: center;">Faculty Advisor</p><br>
                 </div>
              </div>
             </div>
@@ -360,7 +360,7 @@
               <div id="teamwork">
                 <img src="images/teams/Present/Abhilash_.jpg" style="width:100%;height: 12em;">
                  <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
-                 <h1 style="font-size: 1.3em;text-align: center;">MRIGANK SHARMA</h1>
+                 <h1 style="font-size: 2.5em;text-align: center;">Abhilash</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
              </div>
@@ -370,7 +370,7 @@
               <div id="teamwork">
                 <img src="images/teams/Present/Anjali.jpg" style="width:100%;height: 12em;">
                  <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
-                 <h1 style="font-size: 1.3em;text-align: center;">MRIGANK SHARMA</h1>
+                 <h1 style="font-size: 2.5em;text-align: center;">Anjali</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
              </div>
@@ -380,7 +380,7 @@
               <div id="teamwork">
                 <img src="images/teams/Present/Nikunj.jpg" style="width:100%;height: 12em;">
                  <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
-                 <h1 style="font-size: 1.3em;text-align: center;">MRIGANK SHARMA</h1>
+                 <h1 style="font-size: 2.5em;text-align: center;">Nikunj</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
              </div>
@@ -390,7 +390,7 @@
               <div id="teamwork">
                 <img src="images/teams/Present/Pratigya.jpg" style="width:100%;height: 12em;">
                  <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
-                 <h1 style="font-size: 1.3em;text-align: center;">MRIGANK SHARMA</h1>
+                 <h1 style="font-size: 2.5em;text-align: center;">Pratigya</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
              </div>
@@ -400,7 +400,7 @@
               <div id="teamwork">
                 <img src="images/teams/Present/Ravi.jpg" style="width:100%;height: 12em;">
                  <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
-                 <h1 style="font-size: 1.3em;text-align: center;">MRIGANK SHARMA</h1>
+                 <h1 style="font-size: 2.5em;text-align: center;">Ravi</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
              </div>
@@ -410,7 +410,7 @@
               <div id="teamwork">
                 <img src="images/teams/Present/Vishal.jpg" style="width:100%;height: 12em;">
                  <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
-                 <h1 style="font-size: 1.3em;text-align: center;">MRIGANK SHARMA</h1>
+                 <h1 style="font-size: 2.5em;text-align: center;">Vishal</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
              </div>
@@ -420,7 +420,7 @@
               <div id="teamwork">
                 <img src="images/teams/Present/Yagya.jpg" style="width:100%;height: 12em;">
                  <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
-                 <h1 style="font-size: 1.3em;text-align: center;">MRIGANK SHARMA</h1>
+                 <h1 style="font-size: 2.5em;text-align: center;">Yagya</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
              </div>
