fixed carousel button

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <img src="./images/Event 5.jpg" alt="" width="100%" height="650">
     </div>
     <div class="carousel-item">
-      <img src="./images/Event 6.jpg" alt="" width="100%" height="650">
+      <img src="./images/Event 6.jpg" alt="" width="75%" height="650">
     </div>
   </div>
   
@@ -186,14 +186,14 @@
         <section id="reg_act">
           <h1>Regular Activities</h1>
 
-          <div id="demo" class="carousel slide" data-ride="carousel">
+          <div id="demo1" class="carousel slide" data-ride="carousel">
 
   <!-- Indicators -->
   <ul class="carousel-indicators">
-    <li data-target="#demo" data-slide-to="0" class="active"></li>
-    <li data-target="#demo" data-slide-to="1"></li>
-    <li data-target="#demo" data-slide-to="2"></li>
-    <li data-target="#demo" data-slide-to="3"></li>
+    <li data-target="#demo1" data-slide-to="0" class="active"></li>
+    <li data-target="#demo1" data-slide-to="1"></li>
+    <li data-target="#demo1" data-slide-to="2"></li>
+    <li data-target="#demo1" data-slide-to="3"></li>
   </ul>
   
   <!-- The slideshow -->
@@ -213,10 +213,10 @@
   </div>
   
   <!-- Left and right controls -->
-  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+  <a class="carousel-control-prev" href="#demo1" data-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </a>
-  <a class="carousel-control-next" href="#demo" data-slide="next">
+  <a class="carousel-control-next" href="#demo1" data-slide="next">
     <span class="carousel-control-next-icon"></span>
   </a>
 </div>
@@ -231,12 +231,12 @@
 
              <h1>Learning Sanskrit</h1>
 
-            <div id="demo" class="carousel slide" data-ride="carousel">
+            <div id="demo2" class="carousel slide" data-ride="carousel">
 
         <!-- Indicators -->
           <ul class="carousel-indicators">
-            <li data-target="#demo" data-slide-to="0" class="active"></li>
-            <li data-target="#demo" data-slide-to="1"></li>
+            <li data-target="#demo2" data-slide-to="0" class="active"></li>
+            <li data-target="#demo2" data-slide-to="1"></li>
           </ul>
   
         <!-- The slideshow -->
@@ -250,10 +250,10 @@
             </div>
             
             <!-- Left and right controls -->
-            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <a class="carousel-control-prev" href="#demo2" data-slide="prev">
               <span class="carousel-control-prev-icon"></span>
             </a>
-            <a class="carousel-control-next" href="#demo" data-slide="next">
+            <a class="carousel-control-next" href="#demo2" data-slide="next">
               <span class="carousel-control-next-icon"></span>
             </a>
           </div>
@@ -267,13 +267,13 @@
 			<h1>Club Library</h1>
 
 
-      <div id="demo" class="carousel slide" data-ride="carousel">
+      <div id="demo3" class="carousel slide" data-ride="carousel">
 
         <!-- Indicators -->
           <ul class="carousel-indicators">
-            <li data-target="#demo" data-slide-to="0" class="active"></li>
-            <li data-target="#demo" data-slide-to="1"></li>
-            <li data-target="#demo" data-slide-to="2"></li>
+            <li data-target="#demo3" data-slide-to="0" class="active"></li>
+            <li data-target="#demo3" data-slide-to="1"></li>
+            <li data-target="#demo3" data-slide-to="2"></li>
           </ul>
   
         <!-- The slideshow -->
@@ -282,18 +282,18 @@
                 <img src="./images/Library Cover.jpg" alt="" width="100%" height="600">
               </div>
               <div class="carousel-item">
-                <img src="./images/Library 1.jpg" alt="" width="100%" height="600">
+                <img src="./images/Library 1.jpg" alt="" width="75%" height="600">
               </div>
               <div class="carousel-item">
-                <img src="./images/Library 2.jpg" alt="" width="100%" height="600">
+                <img src="./images/Library 2.jpg" alt="" width="75%" height="600">
               </div>
             </div>
             
             <!-- Left and right controls -->
-            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <a class="carousel-control-prev" href="#demo3" data-slide="prev">
               <span class="carousel-control-prev-icon"></span>
             </a>
-            <a class="carousel-control-next" href="#demo" data-slide="next">
+            <a class="carousel-control-next" href="#demo3" data-slide="next">
               <span class="carousel-control-next-icon"></span>
             </a>
           </div>
@@ -330,7 +330,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Alumni/Anula_face.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);padding: 1em;">
                  <h1 style="font-size:2.5em;text-align: center;">Anula</h1>
                  <p style="text-align: center;">Alumni</p><br><br>
                   </div>
@@ -340,7 +340,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Alumni/Eklavya_face.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
                  <h1 style="font-size:2.5em;text-align: center;">Eklavya</h1>
                  <p style="text-align: center;">Alumni</p><br><br>
                  </div>
@@ -350,7 +350,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Alumni/Gargi_face.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
                  <h1 style="font-size:2.5em;text-align: center;">Gargi</h1>
                  <p style="text-align: center;">Alumni</p><br><br>
                 </div>
@@ -360,7 +360,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Alumni/Mihir_face.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
                  <h1 style="font-size:2.5em;text-align: center;">Mihir</h1>
                  <p style="text-align: center;">Alumni</p><br><br>
                 </div>
@@ -370,7 +370,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Alumni/Mrigank_face.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
                  <h1 style="font-size:2.5em;text-align: center;">MRIGANK</h1>
                  <p style="text-align: center;">Alumni</p><br>
                 </div>
@@ -382,8 +382,8 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/anil sir_faculty adviser.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
-                 <h1 style="font-size: 2.5em;text-align: center;">Anil sir</h1>
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
+                 <h1 style="font-size: 1.8em;text-align: center;">Prof. Anil Gourishetty</h1>
                  <p style="text-align: center;">Faculty Advisor</p><br>
                 </div>
              </div>
@@ -392,7 +392,7 @@
            <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Abhilash_.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Abhilash</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
@@ -402,7 +402,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Anjali.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Anjali</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
@@ -412,7 +412,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Nikunj.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Nikunj</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
@@ -422,7 +422,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Pratigya.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Pratigya</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
@@ -432,7 +432,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Ravi.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Ravi</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
@@ -442,7 +442,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Vishal.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Vishal</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
@@ -452,7 +452,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Yagya.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-color: yellow;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Yagya</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
