Fixed team responsiveness issue

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Alumni/Eklavya_face.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);padding: 1em;">
                  <h1 style="font-size:2.5em;text-align: center;">Eklavya</h1>
                  <p style="text-align: center;">Alumni</p><br><br>
                  </div>
@@ -350,7 +350,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Alumni/Gargi_face.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);padding: 1em;">
                  <h1 style="font-size:2.5em;text-align: center;">Gargi</h1>
                  <p style="text-align: center;">Alumni</p><br><br>
                 </div>
@@ -360,7 +360,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Alumni/Mihir_face.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);padding: 1em;">
                  <h1 style="font-size:2.5em;text-align: center;">Mihir</h1>
                  <p style="text-align: center;">Alumni</p><br><br>
                 </div>
@@ -370,19 +370,19 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Alumni/Mrigank_face.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);padding: 1em;">
                  <h1 style="font-size:2.5em;text-align: center;">MRIGANK</h1>
                  <p style="text-align: center;">Alumni</p><br>
                 </div>
              </div>
             </div>
 
-            <p style="font-size:5em;text-align:center;font-family:Times New Roman;">Present Members</p>
+            <p style="font-size:4em;text-align:center;font-family:Times New Roman;">Present Members</p>
 
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/anil sir_faculty adviser.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);padding: 1em;">
                  <h1 style="font-size: 1.8em;text-align: center;">Prof. Anil Gourishetty</h1>
                  <p style="text-align: center;">Faculty Advisor</p><br>
                 </div>
@@ -392,7 +392,7 @@
            <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Abhilash_.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Abhilash</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
@@ -402,7 +402,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Anjali.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Anjali</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
@@ -412,7 +412,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Nikunj.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Nikunj</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
@@ -422,7 +422,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Pratigya.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Pratigya</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
@@ -432,7 +432,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Ravi.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Ravi</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
@@ -442,7 +442,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Vishal.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Vishal</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
@@ -452,7 +452,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Yagya.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);;padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Yagya</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
