Changed carousel size

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		<!-- Past Events -->
 
 
-<section id="events">
+<section id="events" style="background-color: #f2f2f2;">
 		
 			<h1>Past Events</h1>
 
@@ -149,19 +149,19 @@
   <!-- The slideshow -->
   <div class="carousel-inner" style="text-align: center;">
     <div class="carousel-item active">
-      <img src="./images/Event 1.jpg" alt="" width="100%" height="650">
+      <img src="./images/Event 1.jpg" alt="" width="75%" height="650">
     </div>
     <div class="carousel-item">
-      <img src="./images/Event 2.jpg" alt="" width="100%" height="650">
+      <img src="./images/Event 2.jpg" alt="" width="75%" height="650">
     </div>
     <div class="carousel-item">
-      <img src="./images/Event 3.jpg" alt="" width="100%" height="650">
+      <img src="./images/Event 3.jpg" alt="" width="75%" height="650">
     </div>
     <div class="carousel-item">
-      <img src="./images/Event 4.jpg" alt="" width="100%" height="650">
+      <img src="./images/Event 4.jpg" alt="" width="75%" height="650">
     </div>
     <div class="carousel-item">
-      <img src="./images/Event 5.jpg" alt="" width="100%" height="650">
+      <img src="./images/Event 5.jpg" alt="" width="75%" height="650">
     </div>
     <div class="carousel-item">
       <img src="./images/Event 6.jpg" alt="" width="75%" height="650">
@@ -183,7 +183,7 @@
 
     <!-- Regular Activities -->
 
-        <section id="reg_act">
+        <section id="reg_act" style="background-color: #f2f2f2;">
           <h1>Regular Activities</h1>
 
           <div id="demo1" class="carousel slide" data-ride="carousel">
@@ -199,16 +199,16 @@
   <!-- The slideshow -->
   <div class="carousel-inner" style="text-align: center;">
     <div class="carousel-item active">
-      <img src="./images/act_1.jpg" alt="" width="100%" height="600">
+      <img src="./images/act_1.jpg" alt="" width="75%" height="600">
     </div>
     <div class="carousel-item">
-      <img src="./images/act_2.jpg" alt="" width="100%" height="600">
+      <img src="./images/act_2.jpg" alt="" width="75%" height="600">
     </div>
     <div class="carousel-item">
-      <img src="./images/act_3.jpg" alt="" width="100%" height="600">
+      <img src="./images/act_3.jpg" alt="" width="75%" height="600">
     </div>
     <div class="carousel-item">
-      <img src="./images/act_4.jpg" alt="" width="100%" height="600">
+      <img src="./images/act_4.jpg" alt="" width="75%" height="600">
     </div>
   </div>
   
@@ -227,7 +227,7 @@
 
      <!-- Learning Sanskrit -->
 
-        <section id="le_sanskrit">
+        <section id="le_sanskrit" style="background-color: #f2f2f2;">
 
              <h1>Learning Sanskrit</h1>
 
@@ -242,10 +242,10 @@
         <!-- The slideshow -->
             <div class="carousel-inner" style="text-align: center;">
               <div class="carousel-item active">
-                <img src="./images/Learning_1.jpg" alt="" width="100%" height="600">
+                <img src="./images/Learning_1.jpg" alt="" width="75%" height="600">
               </div>
               <div class="carousel-item">
-                <img src="./images/Learning_2.jpg" alt="" width="100%" height="600">
+                <img src="./images/Learning_2.jpg" alt="" width="75%" height="600">
               </div>
             </div>
             
@@ -262,7 +262,7 @@
 
 		<!--	Library  -->
 
-<section id="library">
+<section id="library" style="background-color: #f2f2f2;">
 		
 			<h1>Club Library</h1>
 
@@ -279,7 +279,7 @@
         <!-- The slideshow -->
             <div class="carousel-inner" style="text-align: center;">
               <div class="carousel-item active">
-                <img src="./images/Library Cover.jpg" alt="" width="100%" height="600">
+                <img src="./images/Library Cover.jpg" alt="" width="75%" height="600">
               </div>
               <div class="carousel-item">
                 <img src="./images/Library 1.jpg" alt="" width="75%" height="600">
@@ -452,7 +452,7 @@
             <div class="team">
               <div id="teamwork">
                 <img src="images/teams/Present/Yagya.jpg" style="width:100%;height: 12em;">
-                 <div style="width:100%;height: 12em;background-image: linear-gradient(red, yellow);padding: 1em;">
+                 <div style="width:100%;height: 12em;background-image: linear-gradient(blue,yellow);padding: 1em;">
                  <h1 style="font-size: 2.5em;text-align: center;">Yagya</h1>
                  <p style="text-align: center;">Executive Member</p><br>
                 </div>
